2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix AWS4 auth-string

2016-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Orion Poplawski
	* server-src/amvault.pl: Fix condition  for level with incrs_only

2016-05-04  Dustin J. Mitchell <dustin@mozilla.com>
	* man/xml-source/amanda-auth.7.xml: Improve doc

2016-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/client_util.c (run_client_scripts): return the exit
	  status of the scripts
	* client-src/client_util.h (run_client_scripts): Change return type to
	  int
	* client-src/sendbackup.c: Do not run the application if a
	  PRE-DLE-BACKUP script failed

2016-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement

2016-04-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-util.c: Fix buffer overflow

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement
	* server-src/dumper.c: Call security_stream_read_cancel

2016-04-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (split_quoted_strings_for_amstatus): New
	  function to parse a line for Amanda::Status
	* common-src/amutil.h (split_quoted_strings_for_amstatus): Add
	  protoype
	* perl/Amanda/Util.swg: Swig split_quoted_strings_for_amstatus
	* server-src/amstatus.pl: Use split_quoted_strings_for_amstatus

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/deb/amanda-backup-client.install,
	  packaging/deb/amanda-backup-server.install: Add etc/amanda/*

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/catalogs/dumper-tryagain.cat: Typo

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Remove multiple output line.
	* server-src/driver.c: Fix after a TRY-AGAIN
	* installcheck/Makefile.am: Add catalogs/dumper-tryagain.cat